; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-rpc-targets.c___rpc_target_set_host.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-rpc-targets.c___rpc_target_set_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_target = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@SarrPos = common dso_local global i32 0, align 4
@Sarr = common dso_local global %struct.rpc_target** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__rpc_target_set_host(%struct.rpc_target* %0) #0 {
  %2 = alloca %struct.rpc_target*, align 8
  store %struct.rpc_target* %0, %struct.rpc_target** %2, align 8
  %3 = load %struct.rpc_target*, %struct.rpc_target** %2, align 8
  %4 = getelementptr inbounds %struct.rpc_target, %struct.rpc_target* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %19, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @SarrPos, align 4
  %10 = icmp slt i32 %9, 10000
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.rpc_target*, %struct.rpc_target** %2, align 8
  %14 = load %struct.rpc_target**, %struct.rpc_target*** @Sarr, align 8
  %15 = load i32, i32* @SarrPos, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @SarrPos, align 4
  %17 = sext i32 %15 to i64
  %18 = getelementptr inbounds %struct.rpc_target*, %struct.rpc_target** %14, i64 %17
  store %struct.rpc_target* %13, %struct.rpc_target** %18, align 8
  br label %19

19:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
